Fix issue where max-height should be none on mobile

--- a/app/assets/stylesheets/objects/_navigation.scss
+++ b/app/assets/stylesheets/objects/_navigation.scss
@@ -114,6 +114,11 @@
       margin-bottom: 40px;
     }
   }
+
+
+  .navigation--fixed {
+    max-height: none;
+  }
 }
 
 @media screen and (max-width: 640px) {
